--- a/my-maze-game/package.json
+++ b/my-maze-game/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/socket.io": "^3.0.1",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.6",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
